[module generator] update enum type: generate members in uppercase and underscore and keep the original value in the 'enumValue' field

--- a/generator/src/main/resources/templates/type_enumeration.hbs
+++ b/generator/src/main/resources/templates/type_enumeration.hbs
@@ -11,8 +11,19 @@ import {{this}};
 @JsonLdTypeName("{{this.id}}")
 public enum {{this.name}}Enum implements {{this.name}} {
 {{#each this.enumerationMembers}}
-    {{this}}{{#not @last}},{{else}};{{/not}}
+    {{capitalizeWithUnderscore this}}("{{this}}"){{#not @last}},{{else}};{{/not}}
 {{/each}}
+
+    private final String enumValue;
+
+    {{this.name}}Enum(String enumValue) {
+        this.enumValue = enumValue;
+    }
+
+    @Override
+    public String toString() {
+        return enumValue;
+    }
 
 {{#each this.allProperties}}
     @Override
