Generate toString() method in abstract DataType

--- a/generator/src/main/resources/templates/abstract_data_type.hbs
+++ b/generator/src/main/resources/templates/abstract_data_type.hbs
@@ -20,5 +20,15 @@ public abstract class {{this.name}}<T>{{#if this.parents}} extends {{#each this.
     public T getValue() {
         return value;
     }
+
+    @Override
+    public String toString() {
+        return new StringBuilder()
+                .append(getClass().getSimpleName())
+                .append("{")
+                .append("value=").append(value)
+                .append('}')
+                .toString();
+    }
 }
 {{/with}}
